ingress/ingress-resource.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    generation: 1
    name: ingress-wear-watch
    namespace: app-space
    resourceVersion: "1497"
    uid: 0362a21b-bd9e-408d-843e-e2763cf25753
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: wear-service
              port:
                number: 8080
          path: /wear
          pathType: Prefix
        - backend:
            service:
              name: video-service
              port:
                number: 8080
          path: /watch
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.107.150.71
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
